# true-concurrency

./: .gitignore  BlurExprmt.c  CMakeLists.txt  Compare.c  ConcMain.c  Makefile  PicProcess.c  PicProcess.h  PicStore.c  PicStore.h  Picture.c  Picture.h  SeqMain.c  Utils.c  Utils.h  example_input.txt  extension_pic_proc_tests.rb  pic_proc_tests.rb  readme.md
test_files/: concurrent_blurs.txt  example_input.txt  exit_test.txt  liststore.txt  load_test.txt  save_test.txt  test_10_blurs.txt  test_blur.txt  test_flipH.txt  test_flipV.txt  test_grayscale.txt  test_invert.txt  test_load_and_blur.txt  test_load_and_flipH.txt  test_load_and_flipV.txt  test_load_and_grayscale.txt  test_load_and_invert.txt  test_load_and_rotate_180.txt  test_load_and_rotate_270.txt  test_load_and_rotate_90.txt  test_rotate_180.txt  test_rotate_270.txt  test_rotate_90.txt  unload_test.txt
